--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "typesense": "^1.8.2"
   },
   "resolutions": {
     "@types/mime": "3.0.4"
