--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
     "@types/express-fileupload": "^1.5.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.2",
+    "drizzle-kit": "^0.30.4",
     "nodemon": "^3.1.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.4.3"
   },
   "scripts": {
     "build": "npx tsc",
-    "start": "nodemon dist/src/index.js",
-    "dev": "tsc -w & nodemon dist/src/index.js"
+    "start": "bun run dist/src/index.js",
+    "dev": "tsc -w & bun run dist/src/index.js"
   },
   "dependencies": {
-    "@xata.io/client": "^0.29.3",
+    "@aws-sdk/client-rds-data": "^3.744.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.3",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
