--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
     "postgres": "^3.4.5",
-    "typesense": "^1.8.2"
+    "typesense": "^1.8.2",
+    "uuid": "^11.1.0"
   },
   "resolutions": {
     "@types/mime": "3.0.4"
