--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.2",
     "@types/uuid": "^10.0.0",
-    "drizzle-kit": "^0.30.4",
+    "drizzle-kit": "^0.30.6",
     "nodemon": "^3.1.0",
     "tsx": "^4.19.2",
     "typescript": "^5.4.3"
@@ -30,12 +30,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.39.3",
+    "drizzle-orm": "^0.41.0",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
     "postgres": "^3.4.5",
